twee/styles/type.css
p, p.typewriter, speak {
	opacity: 0;
}

ul, ul li {
	opacity: 0;
}

.typewriter {
	opacity:0;
	animation:typewriter 0s ease-out forwards;
}

article h1:first-of-type, article h2:first-of-type, article h3:first-of-type {
	margin-top: 0;
}

h1, h2, h3, h4, h5, h6 {
	/* text-transform: uppercase; */
	font-variation-settings: "wght" 600;
	font-variant: small-caps;
}

strong {
	font-weight: normal;
	font-variant: small-caps;
}

a, a:hover {
	font-weight: normal;
	font-variant: small-caps;
}

/* .type-out {
	animation:fade-in 1s ease-out reverse forwards;
} */

@keyframes typewriter {
	0% {
		opacity: 0;
	}
	90% {
		opacity: 0;
	}
	91% {
		opacity: 1;
	}
	100% {
		opacity: 1;
	}
}

